# onyx

./: .gitignore  Makefile  README.md  _nb_check_main.py  informacao_nao_capturada.md  main.py  notebook.ipynb  plano_acao_v1_para_v2.md  pyproject.toml  quickstarter_notebook.ipynb  requirements.txt  submission_notebook.ipynb
.crunchdao/: project.json
configs/: default.yaml  null_boostseed.yaml
docs/: ARTIGO.md  BACKLOG_TSAUC.md  CONTRACTS.md  DIAGNOSTICO_TS_AUC.md  HISTORICO.md  INVESTIGACAO_FALHAS_V3.md  MODELO.md  NOTAS_AGENTES.md  PARECER_AUDITORIA_ONYX.md  PLANO_REPOSITORIO.md  PLANO_TECNICO.md  PROPOSTA_FEATURES_V2.md  RESULTADOS_FEATURES_V2.md  RESULTADOS_P1_P4.md  RESULTADOS_ROADMAP_R0_R6.md
metrics/: README.md  auc_by_break_axis.csv  auc_by_step.csv  feature_importance_xs.csv  seed_spread.csv  step_response.csv  xs_base_level.csv
resources/: base_rate_curve.json  boosters.joblib  ensemble_meta.json  feature_schema.json  fold_evals.json  model.joblib
scripts/: avg_oof.py  benchmark_latency.py  break_type_census.py  build_dataset.py  build_submission_notebook.py  ce6_history_classifier.py  check_determinism.py  combine_oof.py  compare_oof.py  crunch_local_ts_auc.py  detectability_report.py  diagnose.py  fuse_seeds.py  local_ts_auc.py  md_to_mobile_pdf.py  metrics_report.py  oof_step_response.py  oof_ts_auc_by_bucket.py  power_envelope_check.py  run_all.py  run_robustness_suite.py  score_centering_experiment.py  seed_spread.py  shap_report.py  submission_smoke_test.py  sweep_hyperparams.py  train.py  train_rank.py  verify_submission_notebook.py  (+2 more)
(+80 files in other folders)
